Archive2/ab/1b1686e0d9c471/output
main.cpp: In function 'int main()':
main.cpp:10:17: error: could not convert '{1, 2, 3}' from '<brace-enclosed initializer list>' to 'X'
 X b = { 1, 2, 3 };
                 ^
