Archive2/ab/1b1686e0d9c471/main.cpp
#include <iostream>
#include <string>
#include <set>
#include <tuple>

struct X { int i, j, k = 42; };
int main()
{

X b = { 1, 2, 3 };
}